deployment_apps/prod/deploy-pesbuk-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk-web
  namespace: production
  labels:
    name: pesbuk-web
spec:
  replicas: 3
  selector:
    matchLabels:
      name: pesbuk-web
  template:
    metadata:
      name: pesbuk-web
      labels:
        name: pesbuk-web
    spec:
      containers:
        - name: pesbuk-web
          image: indragiri21/pesbuk:2.0
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: pesbuk-env-config
            mountPath: "/var/www/html/config"
      volumes:
      - configMap:
            name: pesbuk-env-config
        name: pesbuk-env-config

---

apiVersion: v1
kind: Service
metadata:
  name: pesbuk-env-service
  namespace: production
spec:
  selector:
    name: pesbuk-web
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pesbuk-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pesbuk.yogitechlab.my.id
    http:
      paths:
      #- path: /
      - backend:
          serviceName: pesbuk-env-service
          servicePort: 8080
